--- a/TD1/formulaireVoiture.html
+++ b/TD1/formulaireVoiture.html
@@ -4,7 +4,7 @@
   <title>Forumlaire</title>
 </head>
 <body>
-  <form method="get" action="creerVoiture.php">
+  <form method="post" action="creerVoiture.php">
   <fieldset>
     <legend>Mon formulaire :</legend>
     <p>
